--- a/index.html
+++ b/index.html
@@ -1,55 +1,31 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
   <head>
-      <meta charset="UTF-8">
-      <title>Tris</title>
-      <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
-      <link rel="stylesheet" href="style.css">
+    <meta charset="utf-8">
+    <title>Tris</title>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="https://image.flaticon.com/icons/png/512/53/53654.png">
   </head>
   <body>
 
-    <div id='app'>
-
-      <h1>Tris</h1>
-
-      <div class="container">
-
-        <div class="cell" @click='inner(0);winConFun(player);changePlayer(player)'>
-          <span>{{ signs[0] }}</span>
-        </div>
-        <div class="cell" @click='inner(1);winConFun(player);changePlayer(player)'>
-          <span>{{ signs[1] }}</span>
-        </div>
-        <div class="cell" @click='inner(2);winConFun(player);changePlayer(player)'>
-          <span>{{ signs[2] }}</span>
-        </div>
-        <div class="cell" @click='inner(3);winConFun(player);changePlayer(player)'>
-          <span>{{ signs[3] }}</span>
-        </div>
-        <div class="cell" @click='inner(4);winConFun(player);changePlayer(player)'>
-          <span>{{ signs[4] }}</span>
-        </div>
-        <div class="cell" @click='inner(5);winConFun(player);changePlayer(player)'>
-          <span>{{ signs[5] }}</span>
-        </div>
-        <div class="cell" @click='inner(6);winConFun(player);changePlayer(player)'>
-          <span>{{ signs[6] }}</span>
-        </div>
-        <div class="cell" @click='inner(7);winConFun(player);changePlayer(player)'>
-          <span>{{ signs[7] }}</span>
-        </div>
-        <div class="cell" @click='inner(8);winConFun(player);changePlayer(player)'>
-          <span>{{ signs[8] }}</span>
-        </div>
-
-      </div>
-      <h3>E' il turno del giocatore <strong>{{player}}</strong></h3>
-      <button type="button" @click='restart'> Restart </button>
-      <h2>{{winnerText}}</h2>
-
+    <div id="app">
+      <grid></grid>
     </div>
 
-    <script src="main.js"></script>
+    <script type="text/x-template" id='grid'>
+      <div>
+        <h1>Tris</h1>
+        <div class='grid'>
+          <cell class='cell' @updatePlayer='updatePlayer' @updateSign='updateSign' @checkWin='checkWin' v-for='item in cells' :item='item' :playerTurn='playerTurn'></cell>
+        </div>
+        <h3>E' il turno del giocatore: <strong>{{playerTurn}}</strong></h3>
+        <button type="button" @click='restart'> Restart </button>
+        <h2>{{winnerText}}</h2>
+      </div>
+    </script>
 
+
+    <script src="main.js"></script>
   </body>
 </html>
